Wed Nov  7 11:29:36 2001  Gary Wong  <gtw@research.att.com>

	* eval.c (SanityCheck): Detect some certain or impossible wins,
	gammons and backgammons.
	(MaxTurns): New function.

	* gnubg.c (ERCompletion, OnOffCompletion, PlayerCompletionBoth): New
	functions.
	(FindContext): Handle quoting, and handle more parameter contexts.

	* gnubgtest: Add more tests.

	* play.c (PlayMove): Be more careful about setting fLastMove, to
	avoid spurious animation.

	* set.c (CommandSetEvalParamType): Don't allow setting EVAL_NONE.

	* show.c (ShowCommands): Properly recurse for parameters.

Tue Nov  6 10:48:56 2001  Gary Wong  <gtw@research.att.com>

	* latex.c, postscript.c (ExportGameLaTeX, ExportGamePostScript): Set
	fTurn and fMove in the matchstate (fixes a bug reported by John 
	Chuang).
	* gnubg.c (FormatMoveHint): Add a matchstate parameter.  All callers
	changed.

	* gnubg.c (CommandSaveSettings): Save analysis thresholds (reported
	by Olivier Croisille).
	* set.c (CommandSetAnalysisThresholdInteresting): New function.
	
	* postscript.c (CommandExportPositionEPS): New function.

Mon Nov  5 12:57:19 2001  Gary Wong  <gtw@research.att.com>

	* gtkgame.c (MainSize): Compute the default window size dynamically,
	so that board_size=4 is used if possible (reported by John Chuang).

Wed Oct 31 19:46:31 CET 2001

	* eval.c (FindBestCubeDecision): only beaver if equity > -2, otherwise "you
	can currently take advantage of gnubg to escape a backgammon by doubling, if
	you have cube access; gnubg doesn't realise it's too good to beaver."

Fri Nov  2 17:31:43 2001  Gary Wong  <gtw@research.att.com>

	* configure.in: Automatically detect whether -ieee is required in
	CFLAGS.

Fri Nov  2 13:10:45 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.c (CommandRollout): Make sure a game is being played for
	"rollout =cube".

	* gnubg.c (PlayerCompletion): New function.  Implement completion
	for player name parameters (not yet finished).

	* gnubgtest: Added more tests.
